// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<ul
  className="settings-sub-categories-list"
>
  <li
    key="email"
  >
    <h2
      className="settings-sub-category-name"
      data-key="email"
    >
      property.category.general.email
    </h2>
    <div
      className="settings-sub-category-description markdown"
      dangerouslySetInnerHTML={
        Object {
          "__html": "property.category.general.email.description",
        }
      }
    />
    <DefinitionsList
      scrollToDefinition={[Function]}
      settings={
        Array [
          Object {
            "definition": Object {
              "category": "general",
              "description": "When Foo then Bar",
              "fields": Array [],
              "key": "foo",
              "name": "Foo setting",
              "options": Array [],
              "subCategory": "email",
              "type": "INTEGER",
            },
            "hasValue": true,
            "inherited": true,
            "key": "foo",
            "value": "42",
          },
        ]
      }
    />
    <withCurrentUserContext(EmailForm) />
  </li>
  <li
    key="qg"
  >
    <h2
      className="settings-sub-category-name"
      data-key="qg"
    >
      property.category.general.qg
    </h2>
    <div
      className="settings-sub-category-description markdown"
      dangerouslySetInnerHTML={
        Object {
          "__html": "property.category.general.qg.description",
        }
      }
    />
    <DefinitionsList
      scrollToDefinition={[Function]}
      settings={
        Array [
          Object {
            "definition": Object {
              "category": "general",
              "description": "awesome description",
              "fields": Array [],
              "key": "qg",
              "options": Array [],
              "subCategory": "qg",
            },
            "hasValue": true,
            "inherited": true,
            "key": "foo",
            "value": "42",
          },
        ]
      }
    />
  </li>
</ul>
`;

exports[`should render correctly: subcategory 1`] = `
<ul
  className="settings-sub-categories-list"
>
  <li
    key="qg"
  >
    <h2
      className="settings-sub-category-name"
      data-key="qg"
    >
      property.category.general.qg
    </h2>
    <div
      className="settings-sub-category-description markdown"
      dangerouslySetInnerHTML={
        Object {
          "__html": "property.category.general.qg.description",
        }
      }
    />
    <DefinitionsList
      scrollToDefinition={[Function]}
      settings={
        Array [
          Object {
            "definition": Object {
              "category": "general",
              "description": "awesome description",
              "fields": Array [],
              "key": "qg",
              "options": Array [],
              "subCategory": "qg",
            },
            "hasValue": true,
            "inherited": true,
            "key": "foo",
            "value": "42",
          },
        ]
      }
    />
  </li>
</ul>
`;
